[package]
name = "eziter"
version = "0.1.2"
edition = "2021"
description = "Wrapper around Iterator"
repository = "https://github.com/champii/eziter"
homepage = "https://github.com/champii/eziter"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.7"
